# python-ci

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  index.html  pyproject.toml
.github/workflows/: code-quality.yaml
13/: index.html
13/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt
13/history/: categories-trend.json
13/widgets/: duration-trend.json  executors.json  history-trend.json  status-chart.json  summary.json
14/: index.html
14/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
14/export/: influxDbData.txt
14/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
14/widgets/: executors.json  history-trend.json  severity.json  summary.json
15/: index.html
15/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
15/export/: influxDbData.txt
15/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
15/widgets/: executors.json  history-trend.json  severity.json  summary.json
16/: index.html
16/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
16/export/: influxDbData.txt
16/history/: categories-trend.json  history.json
16/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  suites.json  summary.json
17/: index.html
17/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
17/export/: influxDbData.txt
17/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
17/widgets/: categories-trend.json  duration.json  executors.json  summary.json
18/: index.html
18/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
18/export/: influxDbData.txt
18/history/: categories-trend.json  history.json
18/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  summary.json
24/: index.html
24/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
24/export/: influxDbData.txt
24/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
24/widgets/: duration-trend.json  executors.json  severity.json  summary.json
25/: index.html
25/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
25/export/: influxDbData.txt
26/: index.html
27/: index.html
last-history/: history.json  retry-trend.json
(+60 files in other folders)
