[project]
name = "python-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AlexeyZh", email = "waltafunk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-ci = "python_ci:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]
