[project]
name = "python-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "AlexeyZh", email = "waltafunk@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-ci = "python_ci:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "allure-pytest>=2.13.5",
    "pyright>=1.1.392.post0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "D100",    # missing-docstring-in-public-module
    "S101",    # assert
    "PLR2004", # magic-value-comparison
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "N812",    # Lowercase `expected_conditions` imported as non-lowercase
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "PGH003",  # use specific rule codes when ignoring type issues
    "S105",    # hard-coded password
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-third-party = ["pytest", "playwright"]

[tool.ruff.lint.pylint]
max-args = 5
max-returns = 3
max-statements = 50
max-branches = 12

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["pytest.mark.parametrize"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pytest.fixture"]


[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
